Replaced manual chunking with langchain4js DocumentSplitter